--- a/rauthy-common/Cargo.toml
+++ b/rauthy-common/Cargo.toml
@@ -23,6 +23,7 @@ rand = { workspace = true }
 rand_core = { workspace = true }
 redhac = { workspace = true }
 regex = { workspace = true }
+reqwest = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 sqlx = { workspace = true }
