--- a/rauthy-models/Cargo.toml
+++ b/rauthy-models/Cargo.toml
@@ -31,7 +31,7 @@ chrono = { workspace = true }
 css-color = { workspace = true }
 derive_more = { workspace = true }
 dotenvy = { workspace = true }
-ed25519-compact = { version = "2.0.4", features = ["ed25519"] }
+ed25519-compact = { workspace = true }
 flume = { workspace = true }
 futures-util = "0.3"
 hex = { version = "0.4", features = ["serde"] }
