add `DEV_DPOP_HTTP` and allow `HTTP` for DPoP `htu` claim if `DEV_MODE == true && DEV_DPOP_HTTP == true`

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -2,6 +2,11 @@
 # !!! DO NOT USE IN PRODUCTION !!!
 DEV_MODE=true
 
+# Can be set to 'true' during local development to allow an HTTP scheme for the DPoP 'htu' claim
+# Will only be applied if `DEV_MODE == true` as well.
+# !!! DO NOT USE IN PRODUCTION !!!
+DEV_DPOP_HTTP=true
+
 #####################################
 ############## ACCESS ###############
 #####################################
