add a new dpop nonce cache with configurable expiry

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -146,6 +146,19 @@ CACHE_RECONNECT_TIMEOUT_UPPER=5000
 #SCHED_USER_EXP_DELETE_MINS=7200
 
 #####################################
+############# DEPOP #################
+#####################################
+
+# May be set to 'false' to disable forcing the usage of DPoP nonce's.
+# default: true
+DPOP_FORCE_NONCE=true
+
+# Lifetime in seconds for DPoP nonces. These are used to limit the lifetime of a client's DPoP proof.
+# Do not set a lower lower than 30 seconds to avoid too many failed client token requests.
+# default: 900
+DPOP_NONCE_EXP=900
+
+#####################################
 ############# E-MAIL ################
 #####################################
 
@@ -455,7 +468,7 @@ PROXY_MODE=false
 # Rauthy is open source, which means anyone could just download it and see on their own,
 # but it may be a security concern to just expose less information.
 # (default: false)
-#SWAGGER_UI_EXTERNAL=false
+SWAGGER_UI_EXTERNAL=true
 
 # The interval in seconds in which keep-alives should be sent to SSE clients.
 # Depending on your network setup, proxy timeouts, ..., you may adjust this value to fit your needs.
