deps update + license change in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,10 @@ members = [
 ]
 
 [workspace.package]
-version = "0.17.1-20231102"
+version = "0.18.0"
 edition = "2021"
 authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
-license = "AGPLv3"
+license = "Apache-2.0"
 
 [profile.dev]
 panic = "abort"
