use new certs for dev as defaults

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -482,28 +482,28 @@ SWAGGER_UI_EXTERNAL=true
 ## Rauthy TLS
 
 # Overwrite the path to the TLS certificate file in PEM format for rauthy (default: tls/tls.crt)
-#TLS_CERT=tls/auth.example.com.cert.pem
+TLS_CERT=tls/cert-chain.pem
 # Overwrite the path to the TLS private key file in PEM format for rauthy.
 # If the path / filename ends with '.der', rauthy will parse it as DER, otherwise as PEM.
 # (default: tls/tls.key)
-#TLS_KEY=tls/auth.example.com.key.pem
+TLS_KEY=tls/key.pem
 
 ## CACHE TLS
 
 # Enable / disable TLS for the cache communication (default: true)
-CACHE_TLS=false
+CACHE_TLS=true
 # The path to the server TLS certificate PEM file (default: tls/redhac.local.cert.pem)
-CACHE_TLS_SERVER_CERT=tls/redhac.local.cert.pem
+CACHE_TLS_SERVER_CERT=tls/cert-chain.pem
 # The path to the server TLS key PEM file (default: tls/redhac.local.key.pem)
-CACHE_TLS_SERVER_KEY=tls/redhac.local.key.pem
+CACHE_TLS_SERVER_KEY=tls/key.pem
 # If not empty, the PEM file from the specified location will be added as the CA certificate chain for validating
 # the servers TLS certificate (default: tls/ca-chain.cert.pem)
 CACHE_TLS_CA_SERVER=tls/ca-chain.cert.pem
 
 # The path to the client mTLS certificate PEM file (default: tls/redhac.local.cert.pem)
-CACHE_TLS_CLIENT_CERT=tls/redhac.local.cert.pem
+CACHE_TLS_CLIENT_CERT=tls/cert-chain.pem
 # The path to the client mTLS key PEM file (default: tls/redhac.local.key.pem)
-CACHE_TLS_CLIENT_KEY=tls/redhac.local.key.pem
+CACHE_TLS_CLIENT_KEY=tls/key.pem
 # If not empty, the PEM file from the specified location will be added as the CA certificate chain for validating
 # the clients mTLS certificate (default: tls/ca-chain.cert.pem)
 CACHE_TLS_CA_CLIENT=tls/ca-chain.cert.pem
