use `nioca` in the `TLS` section of the book

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -498,7 +498,7 @@ CACHE_TLS_SERVER_CERT=tls/cert-chain.pem
 CACHE_TLS_SERVER_KEY=tls/key.pem
 # If not empty, the PEM file from the specified location will be added as the CA certificate chain for validating
 # the servers TLS certificate (default: tls/ca-chain.cert.pem)
-CACHE_TLS_CA_SERVER=tls/ca-chain.cert.pem
+CACHE_TLS_CA_SERVER=tls/ca-chain.pem
 
 # The path to the client mTLS certificate PEM file (default: tls/redhac.local.cert.pem)
 CACHE_TLS_CLIENT_CERT=tls/cert-chain.pem
@@ -506,7 +506,7 @@ CACHE_TLS_CLIENT_CERT=tls/cert-chain.pem
 CACHE_TLS_CLIENT_KEY=tls/key.pem
 # If not empty, the PEM file from the specified location will be added as the CA certificate chain for validating
 # the clients mTLS certificate (default: tls/ca-chain.cert.pem)
-CACHE_TLS_CA_CLIENT=tls/ca-chain.cert.pem
+CACHE_TLS_CA_CLIENT=tls/ca-chain.pem
 
 # The domain / CN the client should validate the certificate against. This domain MUST be inside the
 # 'X509v3 Subject Alternative Name' when you take a look at the servers certificate with the openssl tool.
