introduce new config vars

--- a/rauthy.test.cfg
+++ b/rauthy.test.cfg
@@ -56,3 +56,8 @@ HA_HOSTS="http://sd-fedora:8080, http://127.0.0.1:8081 ,http://127.0.0.1:8082"
 
 # Secret token, which is used to authenticate the cache members
 CACHE_AUTH_TOKEN=SuperSecureToken1337
+
+ENABLE_EPHEMERAL_CLIENTS=true
+ENABLE_WEBID_MAPPING=true
+ENABLE_SOLID_AUD=true
+EPHEMERAL_CLIENTS_ALLOWED_FLOWS="authorization_code refresh_token"
