--- a/rauthy-handlers/Cargo.toml
+++ b/rauthy-handlers/Cargo.toml
@@ -23,6 +23,7 @@ rauthy-service = { path = "../rauthy-service" }
 redhac = { workspace = true }
 rust-embed = { version = "8", features = ["actix-web", "tokio"] }
 semver = { workspace = true }
+serde_json = { workspace = true }
 time = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
