--- a/rauthy-models/Cargo.toml
+++ b/rauthy-models/Cargo.toml
@@ -67,6 +67,9 @@ webauthn-rs = { workspace = true }
 webauthn-rs-proto = { workspace = true }
 itertools = "0.11.0"
 rsa = { version = "0.9.3", features = ["serde", "sha2"] }
+rio_api = "0.8.4"
+rio_turtle = "0.8.4"
+serde_with = "3.4.0"
 
 [dev-dependencies]
 pretty_assertions = "1"
