impl new ErrorResponse conversions for TurtleError and Parser
Signed-off-by: sebadob <sebastiandobe@mailbox.org>

--- a/rauthy-common/Cargo.toml
+++ b/rauthy-common/Cargo.toml
@@ -24,6 +24,8 @@ rand_core = { workspace = true }
 redhac = { workspace = true }
 regex = { workspace = true }
 reqwest = { workspace = true }
+rio_api = { workspace = true }
+rio_turtle = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 sqlx = { workspace = true }
