adopt request and response types + users handler with custom triples validation
Signed-off-by: sebadob <sebastiandobe@mailbox.org>

--- a/rauthy-models/Cargo.toml
+++ b/rauthy-models/Cargo.toml
@@ -38,6 +38,7 @@ hex = { version = "0.4", features = ["serde"] }
 hmac-sha256 = { version = "1.1.7", features = ["traits010"] }
 hmac-sha512 = { version = "1.1.5", features = ["traits010", "sha384"] }
 http-serde = "1.1.3"
+itertools = { workspace = true }
 jwt-simple = { workspace = true }
 lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls", "tracing"] }
 num_cpus = { workspace = true }
@@ -52,6 +53,9 @@ redhac = { workspace = true }
 regex = { workspace = true }
 reqwest = { workspace = true }
 ring = { workspace = true }
+rio_api = { workspace = true }
+rio_turtle = { workspace = true }
+rsa = { version = "0.9.3", features = ["serde", "sha2"] }
 semver = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
@@ -65,11 +69,6 @@ uuid = { version = "1", features = ["serde", "v4"] }
 validator = { workspace = true }
 webauthn-rs = { workspace = true }
 webauthn-rs-proto = { workspace = true }
-itertools = "0.11.0"
-rsa = { version = "0.9.3", features = ["serde", "sha2"] }
-rio_api = "0.8.4"
-rio_turtle = "0.8.4"
-serde_with = "3.4.0"
 
 [dev-dependencies]
 pretty_assertions = "1"
