--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ dotenvy = "0.15"
 ed25519-compact = { version = "2.0.4", features = ["ed25519"] }
 flume = "0.11"
 gethostname = "0.4"
+itertools = "0.11.0"
 jwt-simple = "0.11"
 lazy_static = "1"
 num_cpus = "1"
@@ -56,6 +57,8 @@ redhac = "0.9.0"
 regex = "1"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 ring = "0.17"
+rio_api = "0.8.4"
+rio_turtle = "0.8.4"
 semver = { version = "1.0.19", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
