fix: take turtle as input for custom triples

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1,6 +1,6 @@
 # if 'true', the data store will be initialized with DEV values (default: false)
 # !!! DO NOT USE IN PRODUCTION !!!
-DEV_MODE=true
+DEV_MODE=false
 
 # Can be set to 'true' during local development to allow an HTTP scheme for the DPoP 'htu' claim
 # Will only be applied if `DEV_MODE == true` as well.
