--- a/rauthy-common/Cargo.toml
+++ b/rauthy-common/Cargo.toml
@@ -34,6 +34,7 @@ tracing = { workspace = true }
 tokio = { workspace = true }
 utoipa = { workspace = true }
 validator = { workspace = true }
+oxiri = "0.2.2"
 
 [dev-dependencies]
 pretty_assertions = "1"
