add new `EVENT_MATRIX_ERROR_NO_PANIC` config var
Signed-off-by: sebadob <sebastiandobe@mailbox.org>

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1,6 +1,6 @@
 # if 'true', the data store will be initialized with DEV values (default: false)
 # !!! DO NOT USE IN PRODUCTION !!!
-DEV_MODE=false
+DEV_MODE=true
 
 # Can be set to 'true' during local development to allow an HTTP scheme for the DPoP 'htu' claim
 # Will only be applied if `DEV_MODE == true` as well.
@@ -278,6 +278,17 @@ EPHEMERAL_CLIENTS_CACHE_LIFETIME=3600
 # May be set to disable the TLS validation for the Matrix client.
 # default: false
 #EVENT_MATRIX_DANGER_DISABLE_TLS_VALIDATION=false
+# The default behavior is, that Rauthy will panic at startup if it cannot connect
+# to a configured Matrix server. The reason is that event notifications cannot be
+# dropped silently.
+# However, if you use a self-hosted Matrix server which uses Rauthy as its OIDC
+# provider and both instances went offline, you will have a chicken and egg problem:
+# - Rauthy cannot connect to Matrix and will panic
+# - Your Matrix server cannot connect to Rauthy and will panic
+# To solve this issue, you can temporarily set this value to 'true' and revert
+# back, after the system is online again.
+# default: false
+EVENT_MATRIX_ERROR_NO_PANIC=true
 
 # The Webhook for Slack Notifications.
 # If left empty, no messages will be sent to Slack.
