mention default password with DEV_MODE=true
Signed-off-by: sebadob <sebastiandobe@mailbox.org>

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1,4 +1,6 @@
-# if 'true', the data store will be initialized with DEV values (default: false)
+# If 'true', the data store will be initialized with DEV values.
+# The default password for 'admin@localhost.de' is '123SuperSafe'
+# default: false
 # !!! DO NOT USE IN PRODUCTION !!!
 DEV_MODE=true
 
