add config var + documentation
Signed-off-by: sebadob <sebastiandobe@mailbox.org>

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -40,6 +40,26 @@ OPEN_USER_REG=true
 # (default: true)
 #SESSION_VALIDATE_IP=true
 
+# This value may be set to 'true' to disable the binding cookie checking when a user uses the password reset link
+# from an E-Mail.
+#
+# When using such a link, you will get a so called binding cookie. This happens on the very first usage of
+# such a reset link. From that moment on, you will only be able to access the password reset form with this
+# very device and browser. This is just another security mechanism and prevents someone else who might be
+# passively sniffing network traffic to extract the (unencrypted) URI from the header and just use it, before
+# the user has a change to fill out the form. This is a mechanism to prevent against account takeovers during
+# a password reset.
+#
+# The problem however are companies (e.g. Microsoft) who scan their customers E-Mails and even follow links
+# and so on. They call it a "feature". The problem is, that their servers get this binding cookie and the user
+# will be unable to use this link himself.
+# The usage of this config option is highly discouraged, but since everything moves very slow in big enterprises
+# and you cannot change your E-Mail provider quickly, you can use it do just make it work for the moment and
+# deal with it later.
+#
+# default: false
+UNSAFE_NO_RESET_BINDING=true
+
 #####################################
 ############# BACKUPS ###############
 #####################################
