--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-/target
+target
+rauthy-client/target
+rauthy-client/examples/*/target
 .idea
+rauthy-client/.idea
+rauthy-client/examples/*/.idea
 .vscode
 .env
 data
