create a working actix-web example

--- a/rauthy-client/examples/actix-web/Cargo.toml
+++ b/rauthy-client/examples/actix-web/Cargo.toml
@@ -6,10 +6,10 @@ authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
 license = "Apache-2.0"
 
 [dependencies]
+actix-web = { version = "4.4", features = ["rustls-0_21"] }
 anyhow = "1.0.75"
 dotenvy = "0.15.7"
-tokio = { version = "1.34.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
 
-rauthy-client = { path = "../..", features = [] }
+rauthy-client = { path = "../..", default-features = false, features = ["actix-web"] }
