rename examples to not confuse `cargo audit`
Signed-off-by: sebadob <sebastiandobe@mailbox.org>

--- a/rauthy-client/examples/axum/Cargo.toml
+++ b/rauthy-client/examples/axum/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "axum"
+name = "axum-example"
 version = "0.1.0"
 edition = "2021"
 authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
