--- a/rauthy-client/Cargo.toml
+++ b/rauthy-client/Cargo.toml
@@ -32,7 +32,8 @@ bincode = "1.3.3"
 cached = { version = "0.46.1", features = [] }
 chacha20poly1305 = { version = "0.10.1", features = ["std"] }
 chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde", "std"] }
-jwt-simple = "0.11.9"
+jwt-simple = "0.12.1"
+#jwt-simple = "0.11.9"
 rand = "0.8.5"
 reqwest = { version = "0.11", default-features = false, features = [
     "brotli", "json", "rustls-tls", "rustls-tls-webpki-roots"
