--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,15 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.25.0",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-static": "^2.0.1",
-		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"argon2-browser": "^1.18.0",
 		"base64-arraybuffer": "^1.0.2",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte": "^2.32.2",
-		"jwt-decode": "^3.1.2",
 		"oauth-pkce": "^0.0.6",
 		"prettier": "^3.0.0",
 		"prettier-plugin-svelte": "^3.0.0",
@@ -30,7 +30,7 @@
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
 		"typescript": "^5.0.0",
-		"vite": "^4.5.1",
+		"vite": "^5.0.0",
 		"yup": "^1.0.2"
 	},
 	"type": "module"
