--- a/rauthy-common/Cargo.toml
+++ b/rauthy-common/Cargo.toml
@@ -14,6 +14,7 @@ bincode = { workspace = true }
 chacha20poly1305 = { workspace = true }
 chrono = { workspace = true }
 css-color = { workspace = true }
+cryptr = { workspace = true }
 derive_more = { workspace = true }
 flume = { workspace = true }
 gethostname = { workspace = true }
