add temp migration fn to main, bump nightly v0.20, remove enc keys from app state and make it compile again
Signed-off-by: sebadob <sebastiandobe@mailbox.org>

--- a/rauthy-models/Cargo.toml
+++ b/rauthy-models/Cargo.toml
@@ -28,6 +28,7 @@ async-trait = { workspace = true }
 bincode = { workspace = true }
 cached = "0.46"
 chrono = { workspace = true }
+cryptr = { workspace = true }
 css-color = { workspace = true }
 derive_more = { workspace = true }
 dotenvy = { workspace = true }
