--- a/rauthy-main/Cargo.toml
+++ b/rauthy-main/Cargo.toml
@@ -14,6 +14,7 @@ actix-web-prom = "0.7.0"
 actix-service = { workspace = true }
 chrono = { workspace = true }
 cron = "0.12"
+cryptr = { workspace = true }
 dotenvy = { workspace = true }
 flume = { workspace = true }
 num_cpus = { workspace = true }
