--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,8 +39,7 @@ async-trait = "0.1.74"
 bincode = "1"
 chacha20poly1305 = { version = "0.10", features = ["std"] }
 chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
-cryptr = { path = "../cryptr", features = ["s3", "streaming"] }
-#cryptr = { version = "0.1.1", features = ["s3", "streaming"] }
+cryptr = { version = "0.2", features = ["s3", "streaming"] }
 css-color = "0.2"
 derive_more = "0.99"
 dotenvy = "0.15"
