--- a/rauthy-main/Cargo.toml
+++ b/rauthy-main/Cargo.toml
@@ -28,6 +28,7 @@ rustls = "0.21"
 rustls-pemfile = "1"
 semver = { workspace = true }
 serde_json = { workspace = true }
+spow = { workspace = true }
 sqlx = { workspace = true }
 time = { workspace = true }
 tracing = { workspace = true }
