--- a/rauthy-handlers/Cargo.toml
+++ b/rauthy-handlers/Cargo.toml
@@ -25,6 +25,7 @@ redhac = { workspace = true }
 rust-embed = { version = "8", features = ["actix-web", "tokio"] }
 semver = { workspace = true }
 serde_json = { workspace = true }
+spow = { workspace = true }
 time = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
