--- a/rauthy-models/Cargo.toml
+++ b/rauthy-models/Cargo.toml
@@ -61,6 +61,7 @@ rusty-s3 = { workspace = true }
 semver = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+spow = { workspace = true }
 sqlx = { workspace = true }
 time = { workspace = true }
 tracing = { workspace = true }
