new users cache custom config variables

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -135,6 +135,14 @@ CACHE_BUF_SERVER=128
 # Buffer for client requests to remote servers for all cache operations (default: 128)
 CACHE_BUF_CLIENT=128
 
+# The max cache size for users. If you can afford it memory-wise, make it possible to fit
+# all active users inside the cache.
+# default: 100
+CACHE_USERS_SIZE=100
+# The lifespan of the users cache in seconds. Cache eviction on updates will be handled automatically.
+# default: 28800
+CACHE_USERS_LIFESPAN=28800
+
 # Secret token, which is used to authenticate the cache members
 #CACHE_AUTH_TOKEN=
 
