update dev config

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -254,7 +254,7 @@ EMAIL_SUB_PREFIX="Rauthy IAM"
 # panic and exit, so no E-Mail can get lost silently because of
 # a missing SMTP connection.
 # default: 3
-SMTP_CONNECT_RETRIES=0
+SMTP_CONNECT_RETRIES=3
 
 # You can set this to `true` to allow an unencrypted and
 # unauthenticated SMTP connection to an SMTP relay on your localhost
@@ -269,7 +269,7 @@ SMTP_DANGER_INSECURE=true
 # This will most likely be used for testing only.
 # It will only be taken into account if `SMTP_DANGER_INSECURE=true` is set.
 # default: 1025
-SMTP_DANGER_INSECURE_PORT=1025
+#SMTP_DANGER_INSECURE_PORT=1025
 
 #####################################
 ###### ENCRYPTION / HASHING #########
