default for `SMTP_FROM="Rauthy <rauthy@localhost.de>"` to never panic if not set

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -246,6 +246,7 @@ EMAIL_SUB_PREFIX="Rauthy IAM"
 #SMTP_USERNAME=
 #SMTP_PASSWORD=
 # Format: "Rauthy <rauthy@localhost.de>"
+# default: "Rauthy <rauthy@localhost.de>"
 #SMTP_FROM=
 
 # The number of retries that should be done for connecting to
@@ -385,8 +386,7 @@ EPHEMERAL_CLIENTS_CACHE_LIFETIME=3600
 #####################################
 
 # The E-Mail address event notifications should be sent to.
-# If left empty, no messages will be sent to Slack.
-#EVENT_EMAIL=admin@localhost.de
+EVENT_EMAIL=admin@localhost.de
 
 # Matrix variables for event notifications.
 # `EVENT_MATRIX_USER_ID` and `EVENT_MATRIX_ROOM_ID` are mandatory.
@@ -434,7 +434,7 @@ EVENT_MATRIX_ERROR_NO_PANIC=true
 # - critical
 #
 # default: 'warning'
-EVENT_NOTIFY_LEVEL_EMAIL=info
+EVENT_NOTIFY_LEVEL_EMAIL=warning
 # default: 'notice'
 EVENT_NOTIFY_LEVEL_MATRIX=notice
 # default: 'notice'
