--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -22,6 +22,20 @@ OPEN_USER_REG=true
 # default: ''
 #USER_REG_DOMAIN_RESTRICTION=@some-mail-domain.com
 
+# If set to `true`, dynamic client registration will be enabled.
+# Only activate this, if you really need it and you know, what you are doing.
+# The dynamic client registration without further restriction will allow anyone to
+# register new clients, even bots and spammers, and this may create security issues,
+# if not handled properly and your users just login blindly to any client they get
+# redirected to.
+# default: false
+ENABLE_DYN_CLIENT_REG=true
+
+# If specified, this secret token will be validated during dynamic client registrations.
+# Needs to be communicated in advance.
+# default: <empty>
+DYN_CLIENT_REG_TOKEN="123SuperSafe"
+
 # If set to 'true', this will validate the remote peer IP address with each request and compare it with the
 # IP which was used during the initial session creation / login.
 # If the IP is different, the session will be rejected.
