finish `put_clients_dyn`

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -229,7 +229,7 @@ DPOP_FORCE_NONCE=true
 DPOP_NONCE_EXP=900
 
 #####################################
-#### DYNAMIC CLIENT REGISTRATION ####
+########## DYNAMIC CLIENTS ##########
 #####################################
 
 # If set to `true`, dynamic client registration will be enabled.
@@ -255,6 +255,20 @@ DYN_CLIENT_REG_TOKEN="123SuperSafe"
 # the Admin UI like for any other client.
 # default: 1800
 DYN_CLIENT_DEFAULT_TOKEN_LIFETIME=1800
+
+# If set to 'true', client secret and registration token will be
+# automatically rotated each time a dynamic client updates itself
+# via the PUT endpoint. This is the only way that secret rotation
+# could be automated safely.
+# However, this is not mandatory by RFC and it may lead to errors,
+# if the dynamic clients are not implemented properly to check for
+# and update their secrets after they have done a request.
+# If you get into secret-problems with dynamic clients, you should
+# update the client to check for new secrets, if this is under your
+# control. If you cannot do anything about it, you might set this
+# value to 'false' to disable secret rotation.
+# default: true
+DYN_CLIENT_SECRET_AUTO_ROTATE=true
 
 #####################################
 ############# E-MAIL ################
