new config vars for cleanup scheduler

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -270,6 +270,26 @@ DYN_CLIENT_DEFAULT_TOKEN_LIFETIME=1800
 # default: true
 DYN_CLIENT_SECRET_AUTO_ROTATE=true
 
+# This scheduler will be running in the background, if
+# `ENABLE_DYN_CLIENT_REG=true`. It will auto-delete dynamic clients,
+# that have been registered and not been used in the following
+# `DYN_CLIENT_CLEANUP_THRES` hours.
+# Since a dynamic client should be used right away, this should never
+# be a problem with "real" clients, that are not bots or spammers.
+#
+# The interval is specified in minutes.
+# default: 60
+DYN_CLIENT_CLEANUP_INTERVAL=60
+
+# The threshold for newly registered dynamic clients cleanup, if
+# not being used within this timeframe. This is a helper to keep
+# the database clean, if you are not using any `DYN_CLIENT_REG_TOKEN`.
+# The threshold should be specified in minutes. Any client, that has
+# not been used within this time after the registration will be
+# automatically deleted.
+# default: 60
+DYN_CLIENT_CLEANUP_MINUTES=60
+
 #####################################
 ############# E-MAIL ################
 #####################################
